tests/e2e/semantics/function_arg_not_accepted.error
Error: syntax error in story at line 4, column 1

4|    foo(a:2 b:2)
      ^^^^^^^^^

E0114: Function `foo` does not accept argument `b`
